# LexxHard-SensorControlBoard-Firmware

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  build_log_202403071918  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  assign-label-rules.yml  release-drafter.yml
.github/workflows/: assign-label.yml  main.yml  pr_reminder.yaml  release-drafter.yml  release.yml
build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  zephyr_modules.txt  zephyr_settings.txt
build2/Kconfig/: Kconfig.modules  Kconfig.shield  Kconfig.shield.defconfig
build2/modules/CANopenNode/: cmake_install.cmake
build2/modules/TraceRecorder/: cmake_install.cmake
build2/modules/altera/: cmake_install.cmake
build2/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  lexxpluss_mb02.dts.pre.d  lexxpluss_mb02.dts.pre.tmp  linker.cmd  linker.cmd.dep  linker_zephyr_prebuilt.cmd  linker_zephyr_prebuilt.cmd.dep  zephyr.dts  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.map  zephyr.signed.confirmed.hex  zephyr.signed.hex  zephyr.stat  zephyr_prebuilt.elf  zephyr_prebuilt.map
extra/: CMakeLists.txt  Kconfig
extra/drivers/: CMakeLists.txt  Kconfig
extra/zephyr/: module.yml
lexxpluss_apps/: CMakeLists.txt  prj.conf  west.yml
lexxpluss_apps/src/: actuator_controller.cpp  actuator_controller.hpp  actuator_service_controller.cpp  actuator_service_controller.hpp  adc_reader.cpp  adc_reader.hpp  bmu_controller.cpp  bmu_controller.hpp  board_controller.cpp  board_controller.hpp  can_controller.cpp  can_controller.hpp  can_dummy_v7.cpp  can_dummy_v7.hpp  can_dummy_v7_2.cpp  can_dummy_v7_2.hpp  can_imu.hpp  can_main.cpp  can_pgv.hpp  can_test_v7.cpp  can_test_v7.hpp  can_uss.hpp  common.hpp  firmware_updater.cpp  firmware_updater.hpp  gpio_controller.cpp  gpio_controller.hpp  imu_controller.cpp  imu_controller.hpp  interlock_controller.cpp  interlock_controller.hpp  led_controller.cpp  led_controller.hpp  led_test_v7.cpp  led_test_v7.hpp  log_controller.cpp  log_controller.hpp  main.cpp  misc_controller.cpp  misc_controller.hpp  (+48 more)
(+154 files in other folders)
